--- a/templates/layouts/dashboard.html
+++ b/templates/layouts/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="miningkit">
+<html ng-app="emercoin-web">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
