New auth method by login/password

--- a/templates/401.html
+++ b/templates/401.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mining Machine | 403 Error</title>
+    <title>Mining Machine | 401 Error</title>
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='font-awesome/css/font-awesome.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/animate.css') }}" rel="stylesheet">
@@ -11,8 +11,8 @@
 </head>
 <body class="gray-bg">
     <div class="middle-box text-center animated fadeInDown">
-        <h1>403</h1>
-        <h3 class="font-bold">Forbidden</h3>
+        <h1>401</h1>
+        <h3 class="font-bold">Unauthorized</h3>
         <div class="error-desc">
             <div>Sorry, access denied.</div>
         </div>
