--- a/templates/layouts/dashboard.html
+++ b/templates/layouts/dashboard.html
@@ -73,6 +73,14 @@
                         <span class="nav-label">EmerCoin Pool</span>
                     </a>
                 </li>
+                {% if login_btn == 1 %}
+                <li>
+                    <a href="logout">
+                        <i class="fa fa-times"></i>
+                        <span class="nav-label">Logout</span>
+                    </a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </nav>
