--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -10,7 +10,7 @@
             <div class="form-group">
                 <label class="col-md-2 control-label">Email for notifications</label>
                 <div class="col-md-10">
-                    <input type="text" class="form-control" value="2tunnels@gmail.com">
+                    <input type="text" class="form-control" value="support@emercoin.com">
                 </div>
             </div>
             <div class="form-group">
