--- a/templates/layouts/dashboard.html
+++ b/templates/layouts/dashboard.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html ng-app="emercoin-web">
+<html ng-app="emcweb">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EmerCoin WebWallet</title>
+    <title>Blockchain Engine</title>
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='font-awesome/css/font-awesome.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/plugins/morris/morris-0.4.3.min.css') }}" rel="stylesheet">
@@ -18,8 +18,8 @@
             <ul class="nav" id="side-menu">
                 <li class="nav-header">
                     <div class="profile-element">
-                        <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Emercoin WebWallet">
-                        <span class="text-muted text-xs block">Web Wallet</span>
+                        <img src="{{ url_for('static', filename='img/be-logo.png') }}" alt="Blockchain Engine">
+                        <span class="text-muted text-xs block">Emercoin Wallet</span>
                     </div>
                     <div class="logo-element">
                         EMC
@@ -109,7 +109,7 @@
                 v1.0.3
             </div>
             <div>
-                <strong>Copyright</strong> Emercoin &copy; 2016
+                <strong>Blockchain Engine</strong> &copy; Emercoin International Development Group, 2016
             </div>
         </div>
     </div>
