--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EmerCoin VPS Wallet</title>
+    <title>Blockchain Engine</title>
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='font-awesome/css/font-awesome.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/animate.css') }}" rel="stylesheet">
@@ -17,8 +17,8 @@
             <div>
                 <h1 class="logo-name">EMC</h1>
             </div>
-            <h3>EmerCoin</h3>
-            <p>Web Wallet</p>
+            <h3>Blockchain Engine</h3>
+            <p>&nbsp;</p>
             <a href="{{ url_for('wallet') }}" class="btn btn-primary btn-lg">Login via SSL</a>
             <p>or</p>
             <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#login_dialog">Login via Login/Password</button>
